# ipm_mastercard

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
data/: CSU_ACQ_MASTER_OUTGOING_CIC2_26052025_201145.TXT
src/core/: ISO8583.py  __init__.py  iso.py
src/data/: __init__.py  insert_outgoing.py
src/helpers/: __init__.py  filedata.py  searcharq.py
src/models/: __init__.py  types.py
src/template/: __init__.py  mastercard.py
src/utils/: print_color.py
